tests/anp_test_12/anp.yaml
# policy reference:
# https://github.com/kundan2707/network-policy-api/blob/master/conformance/base/admin_network_policy/core-egress-sctp-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: egress-sctp
spec:
  priority: 8
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  egress:
  - name: "allow-to-gryffindor-everything"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "deny-to-gryffindor-everything"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "pass-to-gryffindor-everything"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "deny-to-slytherin-at-port-9003"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "pass-to-slytherin-at-port-9003"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "allow-to-hufflepuff-at-port-9003"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    ports:
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-to-hufflepuff-everything-else"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
